tests/snapshots/integration__integration_tests__step_alias__step_help_includes_aliases.snap
---
source: tests/integration_tests/step_alias.rs
info:
  program: wt
  args:
    - step
    - "-h"
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    LLVM_PROFILE_FILE: "[LLVM_PROFILE_FILE]"
    OPENCODE_CONFIG_DIR: "[TEST_OPENCODE_CONFIG]"
    PATH: "[PATH]"
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_APPROVALS_PATH: "[TEST_APPROVALS]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_SYSTEM_CONFIG_PATH: "[TEST_SYSTEM_CONFIG]"
    WORKTRUNK_TEST_BASH_INSTALLED: "0"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_CODEX_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_FISH_INSTALLED: "0"
    WORKTRUNK_TEST_GEMINI_INSTALLED: "0"
    WORKTRUNK_TEST_MOCK_CONFIG_DIR: "[TEST_MOCK_CONFIG]"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_POWERSHELL_INSTALLED: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WORKTRUNK_TEST_ZSH_INSTALLED: "0"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----
wt step - Run individual operations

Usage: [1m[36mwt step[0m [36m[OPTIONS][0m [36m<COMMAND>[0m

[1m[32mCommands:[0m
  [1m[36mcommit[0m        Stage and commit with LLM-generated message
  [1m[36msquash[0m        Squash commits since branching
  [1m[36mrebase[0m        Rebase onto target
  [1m[36mpush[0m          Fast-forward target to current branch
  [1m[36mdiff[0m          Show all changes since branching
  [1m[36mcopy-ignored[0m  Copy gitignored files to another worktree
  [1m[36meval[0m          [experimental] Evaluate a template expression
  [1m[36mfor-each[0m      [experimental] Run command in each worktree
  [1m[36mpromote[0m       [experimental] Swap a branch into the main worktree
  [1m[36mprune[0m         [experimental] Remove worktrees merged into the default branch
  [1m[36mrelocate[0m      [experimental] Move worktrees to expected paths
  [1m[36mtether[0m        [experimental] Run a command; kill its whole process tree when its worktree is removed

[32m[1mAliases:[22m
  [36m[1mdeploy[22m[0m

Run [2mwt config alias show[0m for the full definitions.

[1m[32mOptions:[0m
  [1m[36m-h[0m, [1m[36m--help[0m  Print help (see more with '--help')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m                Working directory for this command
      [1m[36m--config[0m[36m [0m[36m<path>[0m      User config file path
      [1m[36m--config-set[0m[36m [0m[36m<toml>[0m  Override config with inline TOML, e.g. --config-set list.full=true (repeatable)
  [1m[36m-v[0m, [1m[36m--verbose[0m[36m...[0m         Verbose output (-v: info logs + hook/alias template variables on stderr; -vv: also debug logs and raw subprocess output written to .git/wt/logs/). Set WORKTRUNK_VERBOSE=0|1|2 to apply the same level everywhere — including shell completion, which no flag can reach
  [1m[36m-y[0m, [1m[36m--yes[0m                Skip approval prompts

----- stderr -----
